src/test/ui/const-generics/slice-const-param-mismatch.min.stderr
error: using `&'static str` as const generic parameters is forbidden
  --> $DIR/slice-const-param-mismatch.rs:8:29
   |
LL | struct ConstString<const T: &'static str>;
   |                             ^^^^^^^^^^^^
   |
   = note: the only supported types are integers, `bool` and `char`
   = note: more complex types are supported with `#[feature(const_generics)]`

error: using `&'static [u8]` as const generic parameters is forbidden
  --> $DIR/slice-const-param-mismatch.rs:10:28
   |
LL | struct ConstBytes<const T: &'static [u8]>;
   |                            ^^^^^^^^^^^^^
   |
   = note: the only supported types are integers, `bool` and `char`
   = note: more complex types are supported with `#[feature(const_generics)]`

error: aborting due to 2 previous errors

